[package]
name = "inuol-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

[dev-dependencies]

### All profile options: https://doc.rust-lang.org/cargo/reference/profiles.html

# make the `dev` profile even faster
[profile.dev]
debug = false

[profile.release]
strip = true

[profile.lto]
inherits = "release"
lto = true

# reset `dev` to default settings (this profile should be used with profiling tools)
[profile.debuginfo]
inherits = "dev"
debug = true

# special profile used in CI, optimized for fast compilation and efficient caching
[profile.fast]
inherits = "dev"
opt-level = 0
debug = false
strip = true
incremental = false
codegen-units = 512

[lints.rust]
# deny
unused_must_use = "deny"
# warn
explicit_outlives_requirements = "warn"
future_incompatible = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
# allow
deprecated = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# lints from the clippy::pedantic group that are explicitly allowed
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
new_without_default = "allow"
similar_names = "allow"
unreadable_literal = "allow"
# additional useful lints not coveded by clippy::pedantic
allow_attributes = "warn"
get_unwrap = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
modulo_arithmetic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
implicit_clone = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
wildcard_enum_match_arm = "warn"
